# pdf_kiosk

./: .gitignore  README.md  pyproject.toml
src/project_pdf/: __init__.py  __main__.py  projection.py
