[tool.poetry]
name = "project-pdf"
version = "0.0.1"
description = ""
authors = ["István Siroki <stevesiroki@gmail.com>"]
readme = "README.md"
packages = [{include = "project_pdf", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
selenium = "^4.25.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
ipython = "^8.28.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
